--- a/task4.html
+++ b/task4.html
@@ -17,7 +17,7 @@
     }
 
     header {
-      background: url('https://source.unsplash.com/featured/?technology') no-repeat center center/cover;
+      background: url('https://plus.unsplash.com/premium_photo-1669749218074-e0f0d607210c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBsYWluJTIwY29sb3IlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww') no-repeat center center/cover;
       height: 250px;
       color: white;
       display: flex;
